# rippling

./: Cargo.toml  Cargo.toml~
src/: audio.rs  lib.rs  sound_data.rs
