[package]
name = "rippling"
version = "0.0.1"
authors = ["yong-jie <viorama@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Audio playback library"
keywords = ["audio", "playback"]
repository = "https://github.com/yong-jie/rippling"
edition = "2018"

[dependencies]
rodio = { git = "https://github.com/yong-jie/rodio", branch = "master" }
